# selective-gradient-masking

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
configs/tinystories/: 18M.yaml  34M.yaml  64M.yaml  8M.yaml
configs/wiki/: 125M.yaml  254M.yaml  34M.yaml  64M.yaml
notebooks/: explore_wiki_bio.ipynb
notebooks/tinystories/: grad_norms.ipynb  retain_forget_tradeoff.ipynb  undiscovered_rate.ipynb
notebooks/wiki/: finetuning.ipynb  retain_forget_tradeoff.ipynb
scripts/data/: prepare_wikipedia.sh  tinystories_tokenize.sh  translate_to_spanish.sh
scripts/tinystories/: mislabeling.sh  tradeoff.sh
scripts/wiki/: finetune.sh  rmu.sh  run.sh
src/sgtm/data/: prepare_wikipedia.py  tinystories_tokenize_and_split.py  translate_to_spanish.py
src/sgtm/model/: __init__.py  abstract.py  activation_masking.py  gpt.py  gradient_routing.py  parameter_masking.py  split_linear.py
src/sgtm/model/tests/: test_attention_routing.py  test_gpt_routing.py  test_mlp_routing.py  test_split_linear.py
src/sgtm/train/: rmu.py  trainer.py  utils.py
