[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selective-gradient-masking"
version = "0.1.0"
description = ""
readme = ""
requires-python = ">=3.9"

dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "matplotlib>=3.10.1",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
    "wandb>=0.19.9",
    "seaborn>=0.13.2",
    "jupyter>=1.1.1",
    "notebook>=7.4.0",
    "ipykernel>=6.29.5",
    "isort>=5.12.0",
    "pytest>=8.3.5",
    "transformers~=4.52.4",
    "datasets>=3.6.0",
    "rouge-score>=0.1.2",
    "nltk>=3.8.1",
    "wordcloud>=1.9.2",
    "plotly>=5.15.0",
    "anthropic>=0.50.0",
    "tiktoken>=0.9.0",
    "scikit-learn>=1.7.2",
]

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["E", "F", "I", "W"]
ignore = [
    "F401",  # Unused imports
    "W291",  # Trailing whitespace on a non-empty line
    "W293",  # Blank line contains whitespace
    "I001",  # Import block is un-sorted or un-formatted
]

[tool.ruff.per-file-ignores]
"notebooks/**/*.ipynb" = ["E501"]
